log
Fri Apr 22 23:12:45 HSP 2022: 
 tests:  1|8
total_score: 0/70
e98fbbb
Fri Apr 22 23:50:53 HSP 2022: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:46:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return new;
            ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
04b64d2
Fri Apr 22 23:53:26 HSP 2022: 
 treemap.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  0|0
81a2cd6
Fri Apr 22 23:55:58 HSP 2022: 
 treemap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  2|8
total_score: 0/70
8b2bfe5
Fri Apr 22 23:57:59 HSP 2022: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|7
total_score: 5/70
46b32fa
Sat Apr 23 00:18:03 HSP 2022: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:77:30: error: passing argument 1 of 'searchTreeMap' from incompatible pointer type [-Werror=incompatible-pointer-types]
         return searchTreeMap(tree->current->left,key);
                              ^~~~
treemap.c:73:8: note: expected 'TreeMap * {aka struct TreeMap *}' but argument is of type 'TreeNode * {aka struct TreeNode *}'
 Pair * searchTreeMap(TreeMap * tree, void* key) {
        ^~~~~~~~~~~~~
treemap.c:78:31: error: passing argument 1 of 'searchTreeMap' from incompatible pointer type [-Werror=incompatible-pointer-types]
     else return searchTreeMap(tree->current->right,key);
                               ^~~~
treemap.c:73:8: note: expected 'TreeMap * {aka struct TreeMap *}' but argument is of type 'TreeNode * {aka struct TreeNode *}'
 Pair * searchTreeMap(TreeMap * tree, void* key) {
        ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3c8b653
Sat Apr 23 00:22:34 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:77:30: error: passing argument 1 of 'searchTreeMap' from incompatible pointer type [-Werror=incompatible-pointer-types]
         return searchTreeMap(tree->current->left,key);
                              ^~~~
treemap.c:73:8: note: expected 'TreeMap * {aka struct TreeMap *}' but argument is of type 'TreeNode * {aka struct TreeNode *}'
 Pair * searchTreeMap(TreeMap * tree, void* key) {
        ^~~~~~~~~~~~~
treemap.c:78:31: error: passing argument 1 of 'searchTreeMap' from incompatible pointer type [-Werror=incompatible-pointer-types]
     else return searchTreeMap(tree->current->right,key);
                               ^~~~
treemap.c:73:8: note: expected 'TreeMap * {aka struct TreeMap *}' but argument is of type 'TreeNode * {aka struct TreeNode *}'
 Pair * searchTreeMap(TreeMap * tree, void* key) {
        ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
b4beb83
Sat Apr 23 00:25:08 HSP 2022: 
 treemap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:77:18: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
             tree = tree->current->left;
                  ^
treemap.c:78:19: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
         else tree = tree->current->right;
                   ^
cc1.exe: all warnings being treated as errors
Compilation failed
84020ec
Sat Apr 23 00:28:35 HSP 2022: 
 treemap.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  0|0
f359c79
Sat Apr 23 00:29:41 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:76:37: error: passing argument 1 of 'is_equal' from incompatible pointer type [-Werror=incompatible-pointer-types]
     while (aux != NULL || (is_equal(aux,key,aux->pair->key) == 0)){
                                     ^~~
treemap.c:22:5: note: expected 'TreeMap * {aka struct TreeMap *}' but argument is of type 'TreeNode * {aka struct TreeNode *}'
 int is_equal(TreeMap* tree, void* key1, void* key2){
     ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7b6ec2b
Sat Apr 23 00:39:54 HSP 2022: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:78:27: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
             tree->current = aux->pair;
                           ^
cc1.exe: all warnings being treated as errors
Compilation failed
ff634bd
Sat Apr 23 00:40:54 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:78:27: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
             tree->current =(TreeMap *) aux->pair;
                           ^
cc1.exe: all warnings being treated as errors
Compilation failed
f06c57c
Sat Apr 23 00:41:18 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9632016
Sat Apr 23 00:41:41 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
a64889b
Sat Apr 23 00:42:33 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:78:27: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
             tree->current = (TreeMap *) aux;
                           ^
cc1.exe: all warnings being treated as errors
Compilation failed
d18383c
Sat Apr 23 00:43:05 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:78:27: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
             tree->current = (TreeMap *) aux->parent;
                           ^
cc1.exe: all warnings being treated as errors
Compilation failed
0b106db
Sat Apr 23 00:43:22 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
5bc6022
Sat Apr 23 00:44:04 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:78:27: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
             tree->current = (TreeMap *) aux->pair;
                           ^
cc1.exe: all warnings being treated as errors
Compilation failed
9790e9f
Sat Apr 23 00:44:42 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a3e9c1e
Sat Apr 23 00:45:44 HSP 2022: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
001e148
